feat: Add new field in jwt-generator